--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me</h4>
-                    <h2 class="font-bold text-white text-3xl mb-5 max-w-md lg:text-4xl">I'm Fresh Graduate</h2>
+                    <h2 class="font-bold text-white text-3xl mb-5 max-w-md lg:text-4xl">I'm Hospital IT</h2>
                     <p class="font-medium text-base text-stone-300 lg:text-sm">I am the head of the IT unit at Ar-Royyan Hospital in Indralaya, Palembang. My responsibilities include ensuring high-quality and efficient healthcare services for patients. I am committed to continuously improving the standards of service at this hospital. Additionally, I work as a freelance front-end developer.</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/3">
